pullrequest sonar cloud demo

--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,5 +1,16 @@
 sonar.projectKey=diahhnov_Chapter-8
 sonar.organization=diahhnov
+sonar.exclusions=.github/**, .vscode/**, android/**, assets/**, build/**, ios/**, node_modules/**, scripts/**, **/*.java
+
+sonar.javascript.file.suffixes=.js,.jsx,
+sonar.typescript.file.suffixes=.ts,.tsx,
+sonar.java.binaries=.
+sonar.c.file.suffixes=-
+sonar.cpp.file.suffixes=-
+sonar.objc.file.suffixes=-
+sonar.html.file.suffixes=-
+sonar.css.file.suffixes=-
+sonar.java.file.suffixes=-
 
 # This is the name and version displayed in the SonarCloud UI.
 #sonar.projectName=Chapter-8
