--- a/android/settings.gradle
+++ b/android/settings.gradle
@@ -1,6 +1,4 @@
 rootProject.name = 'pokemonApp'
-include ':app', ':react-native-code-push'
-project(':react-native-code-push').projectDir = new File(rootProject.projectDir, '../node_modules/react-native-code-push/android/app')
 include ':@react-native-firebase_database'
 project(':@react-native-firebase_database').projectDir = new File(rootProject.projectDir, './../node_modules/@react-native-firebase/database/android')
 include ':@react-native-firebase_auth'
@@ -14,6 +12,9 @@ project(':@react-native-firebase_analytics').projectDir = new File(rootProject.p
 include ':react-native-vector-icons'
 project(':react-native-vector-icons').projectDir = new File(rootProject.projectDir, '../node_modules/react-native-vector-icons/android')
 includeBuild('../node_modules/react-native-gradle-plugin')
+include ':app'
+include ':react-native-code-push'
+project(':react-native-code-push').projectDir = new File(rootProject.projectDir, '../node_modules/react-native-code-push/android/app')
 
 if (settings.hasProperty("newArchEnabled") && settings.newArchEnabled == "true") {
     include(":ReactAndroid")
