--- a/package.json
+++ b/package.json
@@ -3,12 +3,12 @@
   "version": "0.0.1",
   "private": true,
   "scripts": {
+    "codepush": "appcenter codepush release-react -a diahnovianti/PokemonApp-app-android-1 -d Production",
     "android": "react-native run-android",
     "ios": "react-native run-ios",
     "start": "react-native start",
     "test": "jest",
-    "lint": "eslint .",
-    "codepush": "appcenter codepush release-react -a diahnovianti/PokemonApp-app-android-1 -d Production"
+    "lint": "eslint ."
   },
   "dependencies": {
     "@react-native-async-storage/async-storage": "^1.17.6",
